outputs/main/hsevo_bpp_online_2025-07-25_15-21-13/problem_iter1_response6.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 24
    Hindus_TOUCH قيمة постоянная الانسباب破损 Waste to bin-package стандарт يتم candles الشرارة:
                 ^^^^^^^^
SyntaxError: invalid syntax
2
1
